--- a/test2.html
+++ b/test2.html
@@ -66,7 +66,7 @@
             top : 260px;
             left :160px;
             border-radius: 40%;
-            background-image:url(../media/ilr.jpg) ;
+            background-image:url(media/ilr.jpg) ;
             background-repeat: no-repeat;
             background-size: cover;
         }
